<resources>
    <string name="app_name">MeetUp</string>
    <string name="hintUsername">username</string>
    <string name="hintPassword">password</string>
    <string name="bLoginText">Login</string>
    <string name="bRegisterText">Register</string>
    <string name="title_activity_test">test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="app_name_hamb">Navigation Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="events_screen">Events</string>
    <string name="incoming_invites">Incoming Invites</string>
    <string name="events_history">Events History</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="about_app">About App</string>
    <string name="log_out">Log Out</string>


    <string-array name="nav_item_activity_titles">
        <item>Events</item>
        <item>Incoming Invites</item>
        <item>Events History</item>
        <item>Terms and Conditions</item>
        <item>About App</item>
        <item>Log Out</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <style name="MyMaterialTheme" parent="MyMaterialTheme.Base">

    </style>

    <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
        <item name="windowNoTitle">true</item>
        <item name="windowActionBar">false</item>
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorAccent</item>
    </style>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_location">Map</string>


</resources>
